# discord-isa

./: .gitignore  ArgData.cpp  ArgData.h  CMakeLists.txt  DiscordClient.cpp  DiscordClient.h  HTTPClient.cpp  HTTPClient.h  HttpChunk.cpp  HttpChunk.h  HttpClient.cpp  HttpClient.h  HttpHead.cpp  HttpHead.h  HttpResonse.cpp  HttpResonse.h  HttpResponse.cpp  HttpResponse.h  Json.cpp  Json.h  JsonException.cpp  JsonException.h  NetClient.cpp  NetClient.h  README.md  Ssl.cpp  Ssl.h  doc.tex  main.cpp  test.cpp
